--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "^20.6.3",
+    "connect-history-api-fallback": "^2.0.0",
     "framer-motion": "^10.16.4",
     "path": "^0.12.7",
     "react": "^18.2.0",
