--- a/package.json
+++ b/package.json
@@ -23,11 +23,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
     "react-hotkeys-hook": "^4.4.1",
-    "react-lineto": "^3.3.0",
     "react-redux": "^8.1.2",
-    "react-resize-detector": "^9.1.0",
-    "react-router-dom": "^6.16.0",
-    "react-xarrows": "^2.0.2"
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@svgr/rollup": "^8.1.0",
